<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/idcard_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/idcard_back"
            android:layout_width="@dimen/toolbar_content"
            android:layout_height="@dimen/toolbar_content"
            android:layout_margin="@dimen/content_margin_hieght"
            android:src="@drawable/ic_toolbar_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/content_margin_hieght"
            android:text="实名验证"
            android:textSize="@dimen/toolbar_content_textsize"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>

    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/colorBackground">
            <TextView
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/re_real_name"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/register_iphone"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textSize="@dimen/content_textsize_small"
                android:hint="@string/re_real_name_tip"
                android:textColor="@color/colorAccent"/>

            <ImageView
                android:id="@+id/register_tip1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/colorBackground">
            <TextView
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/re_real_idcard"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/register_password"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/re_real_idcard_tip"
                android:background="@null"
                android:textSize="@dimen/content_textsize_small"
                android:textColor="@color/colorAccent"/>
            <ImageView
                android:id="@+id/isvisiable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                />
        </LinearLayout>

        <Button
            android:id="@+id/register_next_btn"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_button"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:text="@string/register" />

        <TextView
            android:id="@+id/tip"
            android:layout_marginTop="170dp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="---  注册  ---"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="注册代表你同意"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textColor="@color/colorPrimary"
                android:text="最后一哩服务"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="和"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textColor="@color/colorPrimary"
                android:text="隐私条款"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>